Run `apt update`
Without this we see:
```
$ sudo apt install gcc-aarch64-linux-gnu

WARNING: apt does not have a stable CLI interface. Use with caution in scripts.

Reading package lists...
Building dependency tree...
Reading state information...
The following additional packages will be installed:
  binutils-aarch64-linux-gnu cpp-9-aarch64-linux-gnu cpp-aarch64-linux-gnu
  gcc-10-cross-base gcc-9-aarch64-linux-gnu gcc-9-aarch64-linux-gnu-base
  gcc-9-cross-base libasan5-arm64-cross libatomic1-arm64-cross
  libc6-arm64-cross libc6-dev-arm64-cross libgcc-9-dev-arm64-cross
  libgcc-s1-arm64-cross libgomp1-arm64-cross libitm1-arm64-cross
  liblsan0-arm64-cross libstdc++6-arm64-cross libtsan0-arm64-cross
  libubsan1-arm64-cross linux-libc-dev-arm64-cross
Suggested packages:
  binutils-doc gcc-9-locales cpp-doc gcc-9-doc manpages-dev
  gdb-aarch64-linux-gnu gcc-doc
The following NEW packages will be installed:
  binutils-aarch64-linux-gnu cpp-9-aarch64-linux-gnu cpp-aarch64-linux-gnu
  gcc-10-cross-base gcc-9-aarch64-linux-gnu gcc-9-aarch64-linux-gnu-base
  gcc-9-cross-base gcc-aarch64-linux-gnu libasan5-arm64-cross
  libatomic1-arm64-cross libc6-arm64-cross libc6-dev-arm64-cross
  libgcc-9-dev-arm64-cross libgcc-s1-arm64-cross libgomp1-arm64-cross
  libitm1-arm64-cross liblsan0-arm64-cross libstdc++6-arm64-cross
  libtsan0-arm64-cross libubsan1-arm64-cross linux-libc-dev-arm64-cross
0 upgraded, 21 newly installed, 0 to remove and 17 not upgraded.
Need to get 26.4 MB of archives.
After this operation, 99.8 MB of additional disk space will be used.
Ign:1 http://azure.archive.ubuntu.com/ubuntu focal-updates/main amd64 gcc-9-aarch64-linux-gnu-base amd64 9.3.0-17ubuntu1~20.04cross2
Ign:2 http://azure.archive.ubuntu.com/ubuntu focal-updates/main amd64 cpp-9-aarch64-linux-gnu amd64 9.3.0-17ubuntu1~20.04cross2
Get:3 http://azure.archive.ubuntu.com/ubuntu focal/main amd64 cpp-aarch64-linux-gnu amd64 4:9.3.0-1ubuntu2 [3432 B]
Get:4 http://azure.archive.ubuntu.com/ubuntu focal-upd

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -167,6 +167,7 @@ jobs:
           # by setup-go. See https://github.com/actions/setup-go/issues/181.
           curl --location --output ${{ env.GOROOT }}/src/runtime/race/race_linux_arm64.syso \
             https://github.com/golang/go/raw/release-branch.go${{ matrix.go }}/src/runtime/race/race_linux_arm64.syso && \
+          sudo apt update && \
           sudo apt install gcc-aarch64-linux-gnu && \
           CC=aarch64-linux-gnu-gcc CC_FOR_TARGET=gcc-aarch64-linux-gnu go test -c -race -o goid.race.test ./...
       - name: 'DeleteTestRace with $$ {{ matrix.go}} for aarch64'
