--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -54,11 +54,30 @@ jobs:
           #
           # Cross-compilation became possible in go1.5 with the removal of C
           # code from the compiler. See https://go.dev/doc/go1.5#c.
+          #
+          # Race builds aren't supported in gccgo.
+          #
+          # Cross-compilation isn't supported in gccgo.
           - arch: x64
             go: '1.3'
             x64_race_broken: true
           - arch: x64
             go: '1.4'
+            x64_race_broken: true
+          - arch: x64
+            go: gccgo-9
+            x64_race_broken: true
+          - arch: x64
+            go: gccgo-10
+            x64_race_broken: true
+          - arch: x64
+            go: gccgo-11
+            x64_race_broken: true
+          - arch: x64
+            go: gccgo-12
+            x64_race_broken: true
+          - arch: x64
+            go: gccgo-13
             x64_race_broken: true
           # Go binaries built with Go 1.8 and below are incompatible with QEMU
           # user-level emulation. See
@@ -124,10 +143,17 @@ jobs:
             arm64_race_unsupported: true
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Go
+      - name: Set up go
+        if: ${{ !startsWith(matrix.go, 'gccgo-') }}
         uses: actions/setup-go@v4.0.0
         with:
           go-version: ${{ matrix.go }}
+      - name: Set up gccgo
+        if: ${{ startsWith(matrix.go, 'gccgo-') }}
+        run: |
+          sudo apt update && \
+          sudo apt install -y ${{ matrix.go }} && \
+          echo ${{ matrix.go }} | sed 's/^gcc//' | xargs -I % ln -s /usr/bin/% /usr/bin/go
       - name: 'Build with ${{ matrix.go }}'
         if: ${{ matrix.arch == 'x64' }}
         run: go build -v ./...
@@ -137,13 +163,13 @@ jobs:
           GOARCH: 386
         run: go build -v ./...
       - name: 'Check that Get is inlined with ${{ matrix.go }}'
-        if: ${{ matrix.arch == 'x64' }}
+        if: ${{ !startsWith(matrix.go, 'gccgo-') && matrix.arch == 'x64' }}
         run: |
           if echo -e '${{ matrix.go }}\n1.12' | sort -V | head -n1 | xargs test 1.12 = ; then
             go build -gcflags='-m' 2>&1 | grep 'can inline Get$' > /dev/null
           fi
       - name: 'Check that Get is inlined with ${{ matrix.go }}'
-        if: ${{ matrix.arch == '386' }}
+        if: ${{ !startsWith(matrix.go, 'gccgo-') && matrix.arch == '386' }}
         env:
           GOARCH: 386
         run: |
