--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,10 +33,10 @@ jobs:
             go: gccgo-11
           - arch: x64
             go: gccgo-12
-          # NB: gccgo-13 and gccgo-14 are not available in the Ubuntu 22.04.
-          #
-          # TODO(https://github.com/actions/runner-images/issues/9848): Add gccgo-13 and gccgo-14
-          # when Ubuntu 24.04 is GA on GitHub Actions.
+          - arch: x64
+            go: gccgo-13
+          - arch: x64
+            go: gccgo-14
         arch:
           - armv6
           - armv7
